fdo#85812: RTF import: fix run type in new groups

Apparently the run type resets to LTR in a new group.

(regression from fc49c052dbdbb5ab3b0a02a13143705f769b9662)

(cherry picked from commit 88d3f9e4cf64e4ef037063b26ddf347fd42d8d84)

fdo#85812: RTF import: better fix for run type in new groups

Apparently Word treats \ltrch \rtlch differently from
\loch \hich \dbch when groups are opened.

Change-Id: I257712521e8e77fa66e76857489797ecc675506e
(cherry picked from commit a9a9718bb1f64318429562ecdaa3d3763d9e2f4a)
Reviewed-on: https://gerrit.libreoffice.org/12269
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>